[project]
name = "llm-gateways"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-litellm>=0.7.0",
    "langchain-openai>=1.3.2",
    "litellm>=1.89.1",
    "python-dotenv>=1.2.2",
]
